2006-01-03  Matti Aarnio  <mea@zmailer.org>

	* configure.in:
	    Version: 2.99.57.pre4

	* configure.in:
	    SASL2 needs some m4 define() macros...

	* transports/smtp/appendlet.c:
	    Couple debugging printouts fixed.

	* scheduler/transport.c:
	    Oops..  Error detection failures in select processing.
	    Correct errno/err variable use.

	* transports/smtp/smtp.h, smtpserver/smtpetrn.c:
	    OpenSSL API has changed a bit, must now explicitely
	    include  <openssl/md5.h>

2005-09-23  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/smtpserver.c:
	    Clean (and simplify) data input error detection.
	    Will now complain correctly about 8-bit chars, etc.

2005-09-22  Nick Briggs <briggs@parc.com>

	* smtpserver/policytest.h:
	    Missed  "HAVE_DB4"  instance definition.

2005-08-18  "Darryl L. Miles" <darryl@netbauds.net>

	* smtpserver/smtpauth.c:
	    Under SASL2 mechanisms, follow restructurings
	    a month and half ago.

2005-07-02  Matti Aarnio  <mea@zmailer.org>

	* doc/guides/smtp-msa-mode:
	    Note about document being rather obsolete,
	    and what did replace it...

	* doc/guides/smtpauth-login-pam-support:
	    Do read  smtpserver(8) man-page about these
	    details.

	* man/smtpserver.8.in:
	    Lots of revision work to update the manual towards
	    what the system implements, and how to use it.

	* proto/smtpserver.conf.in:
	    Revised and updated default file for current
	    recommended setup.

	* smtpserver/smtpserver.h, smtpserver/smtpserver.c,
	  smtpserver/cfgread.c,    smtpserver/smtptls.c,
	  smtpserver/policytest.h, smtpserver/policytest.c,
	  smtpserver/smtpauth.c,   smtpserver/smtpcmds.c,
	  smtpserver/smtpdata.c,   smtpserver/smtpetrn.c,
	  smtpserver/subdaemon-rtr.c:
	    - Big restructuring, where some three dozen
	      parameters were moved into groups, and a way
	      for parameter groups to be created, and then
	      used was implemented.
	    - Allows clean(er) parametrization of TLS, and