@@ -1,3 +1,11 @@
+2006-01-04  Matti Aarnio  <mea@zmailer.org>
+
+	* smtpserver/rfc821scn.c:
+	    After years of operation, learned that bad EHLO-parameter
+	    with 8-bit chars is able to crash the smtpserver in 
+	    rfc821_domain() when it check byte (character) being
+	    in some class or other.
+
 2006-01-03  Matti Aarnio  <mea@zmailer.org>
 
 	* configure.in:
